--- a/style.css
+++ b/style.css
@@ -1,10 +1,50 @@
-html, body {
+* {
   margin: 0;
   padding: 0;
-
-  background-color: black;
+  box-sizing: border-box;
 }
+
+body {
+  background-color: #222;
+
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  
+  font-family: Parkinsans, sans-serif;
+  color: white;
+}
+
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  gap: 20px;
+
+    h1{
+      font-size: 2.2rem;
+      transition: 0.4s;
+
+      &:hover{
+        color: #f00;
+        transform: scale(1.1);
+      }
+    }
+}
+
+
 
 canvas {
   display: block;
+
+  border: black 2px solid;
+  border-radius: 15px;
+
+  transition: 0.4s;
+  
+  &:hover {
+    border-color: #f00;
+    transform: scale(1.05);
+  }	
 }
